--- a/app/views/forms/form_control.html.erb
+++ b/app/views/forms/form_control.html.erb
@@ -1,6 +1,7 @@
 <h1>Forms#form_control</h1>
 
 <!-- 例 -->
+<h2>example:</h2>
 <div class="mb-3">
   <label for="exampleFormControlInput1" class="form-label">Email address</label>
   <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
@@ -11,11 +12,13 @@
 </div>
 
 <!-- サイズ調整 -->
+<h2>size adjustment:</h2>
 <input class="form-control form-control-lg" type="text" placeholder=".form-control-lg" aria-label=".form-control-lg example">
 <input class="form-control" type="text" placeholder="Default input" aria-label="default input example">
 <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm" aria-label=".form-control-sm example">
 
 <!-- フォームテキスト -->
+<h2>form text:</h2>
 <label for="inputPassword5" class="form-label">Password</label>
 <input type="password" id="inputPassword5" class="form-control" aria-labelledby="passwordHelpBlock">
 <div id="passwordHelpBlock" class="form-text">
@@ -37,13 +40,16 @@
 </div>
 
 <!-- 無効化 -->
+<h2>disabled:</h2>
 <input class="form-control" type="text" placeholder="Disabled input" aria-label="Disabled input example" disabled>
 <input class="form-control" type="text" value="Disabled readonly input" aria-label="Disabled input example" disabled readonly>
 
 <!-- 読み取り専用 -->
+<h2>readonly:</h2>
 <input class="form-control" type="text" value="Readonly input here..." aria-label="readonly input example" readonly>
 
 <!-- 読み込みせ専用のプレーンテキスト -->
+<h2>readonly plaintext:</h2>
 <div class="mb-3 row">
   <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
   <div class="col-sm-10">
@@ -72,6 +78,7 @@
 </form>
 
 <!-- ファイル入力 -->
+<h2>file input:</h2>
 <div class="mb-3">
   <label for="formFile" class="form-label">Default file input example</label>
   <input class="form-control" type="file" id="formFile">
@@ -94,10 +101,12 @@
 </div>
 
 <!-- カラー -->
+<h2>color:</h2>
 <label for="exampleColorInput" class="form-label">Color picker</label>
 <input type="color" class="form-control form-control-color" id="exampleColorInput" value="#563d7c" title="Choose your color">
 
 <!-- データリスト -->
+<h2>data list:</h2>
 <label for="exampleDataList" class="form-label">Datalist example</label>
 <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Type to search...">
 <datalist id="datalistOptions">
@@ -107,4 +116,3 @@
   <option value="Los Angeles">
   <option value="Chicago">
 </datalist>
-
