Add disabled range

--- a/app/views/forms/range.html.erb
+++ b/app/views/forms/range.html.erb
@@ -4,3 +4,7 @@
 <label for="customRange1" class="form-label">Example range</label>
 <input type="range" class="form-range" id="customRange1">
 
+<h2>disabled:</h2>
+<label for="disabledRange" class="form-label">Disabled range</label>
+<input type="range" class="form-range" id="disabledRange" disabled>
+
