--- a/app/views/forms/range.html.erb
+++ b/app/views/forms/range.html.erb
@@ -8,3 +8,10 @@
 <label for="disabledRange" class="form-label">Disabled range</label>
 <input type="range" class="form-range" id="disabledRange" disabled>
 
+<h2>min, max:</h2>
+<label for="customRange2" class="form-label">Example range</label>
+<input type="range" class="form-range" min="0" max="5" id="customRange2">
+
+<h2>step:</h2>
+<label for="customRange3" class="form-label">Example range</label>
+<input type="range" class="form-range" min="0" max="5" step="0.5" id="customRange3">
