--- a/app/views/forms/input_group.html.erb
+++ b/app/views/forms/input_group.html.erb
@@ -36,3 +36,9 @@
   <span class="input-group-text">With textarea</span>
   <textarea class="form-control" aria-label="With textarea"></textarea>
 </div>
+
+<h2>flex-nowrap:</h2>
+<div class="input-group flex-nowrap">
+  <span class="input-group-text" id="addon-wrapping">@</span>
+  <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="addon-wrapping">
+</div>
