Add multiple inputs

--- a/app/views/forms/input_group.html.erb
+++ b/app/views/forms/input_group.html.erb
@@ -74,3 +74,10 @@
   <input type="text" class="form-control" aria-label="Text input with radio button">
 </div>
 
+<h2>マルチプルインプット</h2>
+<div class="input-group">
+  <span class="input-group-text">First and last name</span>
+  <input type="text" aria-label="First name" class="form-control">
+  <input type="text" aria-label="Last name" class="form-control">
+</div>
+
