Add multiple addons

--- a/app/views/forms/input_group.html.erb
+++ b/app/views/forms/input_group.html.erb
@@ -81,3 +81,16 @@
   <input type="text" aria-label="Last name" class="form-control">
 </div>
 
+<h2>複数のアドオン</h2>
+<div class="input-group mb-3">
+  <span class="input-group-text">$</span>
+  <span class="input-group-text">0.00</span>
+  <input type="text" class="form-control" aria-label="Dollar amount (with dot and two decimal places)">
+</div>
+
+<div class="input-group">
+  <input type="text" class="form-control" aria-label="Dollar amount (with dot and two decimal places)">
+  <span class="input-group-text">$</span>
+  <span class="input-group-text">0.00</span>
+</div>
+
