Add read only plain text

--- a/app/views/forms/floating_labels.html.erb
+++ b/app/views/forms/floating_labels.html.erb
@@ -62,3 +62,13 @@
   <label for="floatingSelectDisabled">Works with selects</label>
 </div>
 
+<h2>読み取り専用のプレーンテキスト</h2>
+<div class="form-floating mb-3">
+  <input type="email" readonly class="form-control-plaintext" id="floatingEmptyPlaintextInput" placeholder="name@example.com">
+  <label for="floatingEmptyPlaintextInput">Empty input</label>
+</div>
+<div class="form-floating mb-3">
+  <input type="email" readonly class="form-control-plaintext" id="floatingPlaintextInput" placeholder="name@example.com" value="name@example.com">
+  <label for="floatingPlaintextInput">Input with value</label>
+</div>
+
