Add input group

--- a/app/views/forms/floating_labels.html.erb
+++ b/app/views/forms/floating_labels.html.erb
@@ -72,3 +72,12 @@
   <label for="floatingPlaintextInput">Input with value</label>
 </div>
 
+<h2>インプットグループ</h2>
+<div class="input-group mb-3">
+  <span class="input-group-text">@</span>
+  <div class="form-floating">
+    <input type="text" class="form-control" id="floatingInputGroup1" placeholder="Username">
+    <label for="floatingInputGroup1">Username</label>
+  </div>
+</div>
+
