--- a/app/views/forms/layout.html.erb
+++ b/app/views/forms/layout.html.erb
@@ -10,3 +10,12 @@
   <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input placeholder">
 </div>
 
+<h2>フォームグリッド</h2>
+<div class="row">
+  <div class="col">
+    <input type="text" class="form-control" placeholder="First name" aria-label="First name">
+  </div>
+  <div class="col">
+    <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
+  </div>
+</div>
