--- a/app/views/forms/layout.html.erb
+++ b/app/views/forms/layout.html.erb
@@ -144,3 +144,16 @@
   </div>
 </div>
 
+<h2>カラムサイズ調整</h2>
+<div class="row g-3">
+  <div class="col-sm-7">
+    <input type="text" class="form-control" placeholder="City" aria-label="City">
+  </div>
+  <div class="col-sm">
+    <input type="text" class="form-control" placeholder="State" aria-label="State">
+  </div>
+  <div class="col-sm">
+    <input type="text" class="form-control" placeholder="Zip" aria-label="Zip">
+  </div>
+</div>
+
