--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,3 +5,28 @@
   background-color: chartreuse;
   text-align: center;
 }
+
+.container-sm {
+  background-color: chocolate;
+  text-align: center;
+}
+
+.container-md {
+  background-color: cornflowerblue;
+  text-align: center;
+}
+
+.container-lg {
+  background-color: darkkhaki;
+  text-align: center;
+}
+
+.container-xl {
+  background-color: darksalmon;
+  text-align: center;
+}
+
+.container-xxl {
+  background-color: crimson;
+  text-align: center;
+}
