--- a/app/views/containers/container.html.erb
+++ b/app/views/containers/container.html.erb
@@ -1,3 +1,9 @@
-<div class="container">
-  <h2>basic container</h2>
-</div>
+<!-- basic container -->
+<div class="container">basic container</div>
+
+<!-- responsive container -->
+<div class="container-sm">100% wide until small breakpoint</div>
+<div class="container-md">100% wide until medium breakpoint</div>
+<div class="container-lg">100% wide until large breakpoint</div>
+<div class="container-xl">100% wide until extra large breakpoint</div>
+<div class="container-xxl">100% wide until extra extra large breakpoint</div>
