--- a/app/views/grids/grid.html.erb
+++ b/app/views/grids/grid.html.erb
@@ -1,4 +1,5 @@
-<!-- example -->
+<!-- example grid -->
+<h2>example grid</h2>
 <div class="container text-center">
   <div class="row">
     <div class="col">
