--- a/app/views/grids/grid.html.erb
+++ b/app/views/grids/grid.html.erb
@@ -13,3 +13,27 @@
     </div>
   </div>
 </div>
+
+<!-- column auto layout - same width -->
+<h2>column auto layout - same width</h2>
+<div class="container text-center">
+  <div class="row">
+    <div class="col">
+      1 of 2
+    </div>
+    <div class="col">
+      2 of 2
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      1 of 3
+    </div>
+    <div class="col">
+      2 of 3
+    </div>
+    <div class="col">
+      3 of 3
+    </div>
+  </div>
+</div>
