--- a/app/views/grids/grid.html.erb
+++ b/app/views/grids/grid.html.erb
@@ -1,4 +1,3 @@
-<!-- example grid -->
 <h2>example grid</h2>
 <div class="container text-center">
   <div class="row">
@@ -14,7 +13,6 @@
   </div>
 </div>
 
-<!-- column auto layout - same width -->
 <h2>column auto layout - same width</h2>
 <div class="container text-center">
   <div class="row">
@@ -31,6 +29,32 @@
     </div>
     <div class="col">
       2 of 3
+    </div>
+    <div class="col">
+      3 of 3
+    </div>
+  </div>
+</div>
+
+<h2>column auto layout - Set the width of one column</h2>
+<div class="container text-center">
+  <div class="row">
+    <div class="col">
+      1 of 3
+    </div>
+    <div class="col-6">
+      2 of 3 (wider)
+    </div>
+    <div class="col">
+      3 of 3
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      1 of 3
+    </div>
+    <div class="col-5">
+      2 of 3 (wider)
     </div>
     <div class="col">
       3 of 3
