--- a/app/views/grids/grid.html.erb
+++ b/app/views/grids/grid.html.erb
@@ -101,3 +101,16 @@
     <div class="col-4">col-4</div>
   </div>
 </div>
+
+<h2>responsive class - stack horizontally</h2>
+<div class="container text-center">
+  <div class="row">
+    <div class="col-sm-8">col-sm-8</div>
+    <div class="col-sm-4">col-sm-4</div>
+  </div>
+  <div class="row">
+    <div class="col-sm">col-sm</div>
+    <div class="col-sm">col-sm</div>
+    <div class="col-sm">col-sm</div>
+  </div>
+</div>
