--- a/app/views/grids/grid.html.erb
+++ b/app/views/grids/grid.html.erb
@@ -136,3 +136,13 @@
     <div class="col-6">.col-6</div>
   </div>
 </div>
+
+<h2>responsive class - row column</h2>
+<div class="container text-center">
+  <div class="row row-cols-2">
+    <div class="col">Column</div>
+    <div class="col">Column</div>
+    <div class="col">Column</div>
+    <div class="col">Column</div>
+  </div>
+</div>
