--- a/app/views/grids/grid.html.erb
+++ b/app/views/grids/grid.html.erb
@@ -146,3 +146,22 @@
     <div class="col">Column</div>
   </div>
 </div>
+
+<h2>nesting</h2>
+<div class="container text-center">
+  <div class="row">
+    <div class="col-sm-3">
+      Level 1: .col-sm-3
+    </div>
+    <div class="col-sm-9">
+      <div class="row">
+        <div class="col-8 col-sm-6">
+          Level 2: .col-8 .col-sm-6
+        </div>
+        <div class="col-4 col-sm-6">
+          Level 2: .col-4 .col-sm-6
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
