--- a/app/views/flexs/flex.html.erb
+++ b/app/views/flexs/flex.html.erb
@@ -25,3 +25,43 @@
   <div class="p-2">Flex item 2</div>
   <div class="p-2">Flex item 3</div>
 </div>
+
+
+
+
+<div class="d-flex justify-content-start">
+  <div class="p-2">justify</div>
+  <div class="p-2">content</div>
+  <div class="p-2">start</div>
+</div>
+
+<div class="d-flex justify-content-end">
+  <div class="p-2">justify</div>
+  <div class="p-2">content</div>
+  <div class="p-2">end</div>
+</div>
+
+<div class="d-flex justify-content-center">
+  <div class="p-2">justify</div>
+  <div class="p-2">content</div>
+  <div class="p-2">center</div>
+</div>
+
+<div class="d-flex justify-content-between">
+  <div class="p-2">justify</div>
+  <div class="p-2">content</div>
+  <div class="p-2">between</div>
+</div>
+
+<div class="d-flex justify-content-around">
+  <div class="p-2">justify</div>
+  <div class="p-2">content</div>
+  <div class="p-2">around</div>
+</div>
+
+<div class="d-flex justify-content-evenly">
+  <div class="p-2">justify</div>
+  <div class="p-2">content</div>
+  <div class="p-2">evenly</div>
+</div>
+
