--- a/app/views/flexs/flex.html.erb
+++ b/app/views/flexs/flex.html.erb
@@ -65,3 +65,37 @@
   <div class="p-2">evenly</div>
 </div>
 
+
+
+
+
+<div class="d-flex align-items-start">
+  <div class="p2">Flex item1</div>
+  <div class="p2">Flex item2</div>
+  <div class="p2">Flex item3</div>
+</div>
+
+<div class="d-flex align-items-end">
+  <div class="p2">Flex item1</div>
+  <div class="p2">Flex item2</div>
+  <div class="p2">Flex item3</div>
+</div>
+
+<div class="d-flex align-items-center">
+  <div class="p2">Flex item1</div>
+  <div class="p2">Flex item2</div>
+  <div class="p2">Flex item3</div>
+</div>
+
+<div class="d-flex align-items-baseline">
+  <div class="p2">Flex item1</div>
+  <div class="p2">Flex item2</div>
+  <div class="p2">Flex item3</div>
+</div>
+
+<div class="d-flex align-items-stretch">
+  <div class="p2">Flex item1</div>
+  <div class="p2">Flex item2</div>
+  <div class="p2">Flex item3</div>
+</div>
+
