--- a/app/views/flexs/flex.html.erb
+++ b/app/views/flexs/flex.html.erb
@@ -26,9 +26,6 @@
   <div class="p-2">Flex item 3</div>
 </div>
 
-
-
-
 <div class="d-flex justify-content-start">
   <div class="p-2">justify</div>
   <div class="p-2">content</div>
@@ -123,5 +120,11 @@
   <div class="p-2">Flex item</div>
   <div class="p-2">Aligned flex item</div>
   <div class="p-2">Flex item</div>
+</div>
+
+<div class="d-flex">
+  <div class="p-2 flex-fill">Flex item with a lot of content</div>
+  <div class="p-2 flex-fill">Flex item</div>
+  <div class="p-2 flex-fill">Flex item</div>
 </div>
 
