--- a/app/views/flexs/flex.html.erb
+++ b/app/views/flexs/flex.html.erb
@@ -169,3 +169,120 @@
   <div class="mt-auto p-2">Flex item</div>
 </div>
 
+<div class="d-flex flex-nowrap">
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+</div>
+
+<div class="d-flex flex-wrap">
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+  <div class="p-2">Flex item</div>
+</div>
+
+<div class="d-flex flex-wrap-reverse">
+  <div class="p-2">Flex item1</div>
+  <div class="p-2">Flex item2</div>
+  <div class="p-2">Flex item3</div>
+  <div class="p-2">Flex item4</div>
+  <div class="p-2">Flex item5</div>
+  <div class="p-2">Flex item6</div>
+  <div class="p-2">Flex item7</div>
+  <div class="p-2">Flex item8</div>
+  <div class="p-2">Flex item9</div>
+  <div class="p-2">Flex item10</div>
+  <div class="p-2">Flex item11</div>
+  <div class="p-2">Flex item12</div>
+  <div class="p-2">Flex item13</div>
+  <div class="p-2">Flex item14</div>
+  <div class="p-2">Flex item15</div>
+  <div class="p-2">Flex item16</div>
+  <div class="p-2">Flex item17</div>
+  <div class="p-2">Flex item18</div>
+  <div class="p-2">Flex item19</div>
+  <div class="p-2">Flex item20</div>
+  <div class="p-2">Flex item21</div>
+  <div class="p-2">Flex item22</div>
+  <div class="p-2">Flex item23</div>
+  <div class="p-2">Flex item24</div>
+  <div class="p-2">Flex item25</div>
+  <div class="p-2">Flex item26</div>
+  <div class="p-2">Flex item27</div>
+  <div class="p-2">Flex item28</div>
+  <div class="p-2">Flex item29</div>
+  <div class="p-2">Flex item30</div>
+  <div class="p-2">Flex item31</div>
+  <div class="p-2">Flex item32</div>
+  <div class="p-2">Flex item33</div>
+  <div class="p-2">Flex item34</div>
+  <div class="p-2">Flex item35</div>
+  <div class="p-2">Flex item36</div>
+</div>
+
