--- a/app/views/flexs/flex.html.erb
+++ b/app/views/flexs/flex.html.erb
@@ -448,3 +448,21 @@
   <div class="p-2">Flex item</div>
 </div>
 
+<div class="d-flex">
+  <div class="flex-shrink-0">
+    <%= image_tag "chrome_plating.jpeg", alt: "No Image" %>
+  </div>
+  <div class="flex-grow-1 ms-3">
+    This is some content from a media component. You can replace this with any content and adjust it as needed.
+  </div>
+</div>
+
+<div class="d-flex align-items-center">
+  <div class="flex-shrink-0">
+    <%= image_tag "chrome_plating.jpeg", alt: "No Image" %>
+  </div>
+  <div class="flex-grow-1 ms-3">
+    This is some content from a media component. You can replace this with any content and adjust it as needed.
+  </div>
+</div>
+
