--- a/app/views/borders/border.html.erb
+++ b/app/views/borders/border.html.erb
@@ -1,5 +1,6 @@
 <div class="fs-1">Border Class</div>
 
+<div class="fs-4">border add</div>
 <div class="row mb-4">
   <div class="border ms-4 me-2" style="width: 100px; height: 100px;"></div>
   <div class="border-top me-2" style="width: 100px; height: 100px;"></div>
@@ -8,6 +9,7 @@
   <div class="border-end" style="width: 100px; height: 100px;"></div>
 </div>
 
+<div class="fs-4">border delete</div>
 <div class="row mb-4">
   <div class="border border-0 ms-4 me-2" style="width: 100px; height: 100px;"></div>
   <div class="border-top border-top-0 me-2" style="width: 100px; height: 100px;"></div>
@@ -16,6 +18,7 @@
   <div class="border-end border-end-0" style="width: 100px; height: 100px;"></div>
 </div>
 
+<div class="fs-4">border theme color</div>
 <div class="row mb-4">
   <div class="border border-primary ms-2 me-2" style="width: 100px; height: 100px;"></div>
   <div class="border border-primary-subtle me-2" style="width: 100px; height: 100px;"></div>
@@ -50,9 +53,19 @@
   Changing border color and width
 </div>
 
+<div class="fs-4">border opacity</div>
 <div class="border border-success p-2 mb-2">This is default success border</div>
 <div class="border border-success p-2 mb-2 border-opacity-75">This is 75% opacity success border</div>
 <div class="border border-success p-2 mb-2 border-opacity-50">This is 50% opacity success border</div>
 <div class="border border-success p-2 mb-2 border-opacity-25">This is 25% opacity success border</div>
 <div class="border border-success p-2 border-opacity-10">This is 10% opacity success border</div>
+
+<div class="fs-4">border width</div>
+<div class="row">
+  <div class="border border-1 ms-4" style="width: 100px; height: 100px;"></div>
+  <div class="border border-2 ms-4" style="width: 100px; height: 100px;"></div>
+  <div class="border border-3 ms-4" style="width: 100px; height: 100px;"></div>
+  <div class="border border-4 ms-4" style="width: 100px; height: 100px;"></div>
+  <div class="border border-5 ms-4" style="width: 100px; height: 100px;"></div>
+</div>
 
