--- a/app/views/borders/border.html.erb
+++ b/app/views/borders/border.html.erb
@@ -69,3 +69,14 @@
   <div class="border border-5 ms-4" style="width: 100px; height: 100px;"></div>
 </div>
 
+<div class="fs-4">border rounded</div>
+<div class="row">
+  <div class="border rounded ms-4" style="width: 100px; height: 100px;"></div>
+  <div class="border rounded-top ms-4" style="width: 100px; height: 100px;"></div>
+  <div class="border rounded-bottom ms-4" style="width: 100px; height: 100px;"></div>
+  <div class="border rounded-start ms-4" style="width: 100px; height: 100px;"></div>
+  <div class="border rounded-end ms-4" style="width: 100px; height: 100px;"></div>
+  <div class="border rounded-circle ms-4" style="width: 100px; height: 100px;"></div>
+  <div class="border rounded-pill ms-4" style="width: 200px; height: 100px;"></div>
+</div>
+
