--- a/app/views/borders/border.html.erb
+++ b/app/views/borders/border.html.erb
@@ -69,7 +69,7 @@
   <div class="border border-5 ms-4" style="width: 100px; height: 100px;"></div>
 </div>
 
-<div class="fs-4">border rounded</div>
+<div class="fs-4">rounded position</div>
 <div class="row">
   <div class="border rounded ms-4" style="width: 100px; height: 100px;"></div>
   <div class="border rounded-top ms-4" style="width: 100px; height: 100px;"></div>
@@ -80,3 +80,21 @@
   <div class="border rounded-pill ms-4" style="width: 200px; height: 100px;"></div>
 </div>
 
+<div class="fs-4">rounded size</div>
+<div class="row">
+  <div class="border rounded-0 ms-4" style="width: 100px; height: 100px;"></div>
+  <div class="border rounded-1 ms-4" style="width: 100px; height: 100px;"></div>
+  <div class="border rounded-2 ms-4" style="width: 100px; height: 100px;"></div>
+  <div class="border rounded-3 ms-4" style="width: 100px; height: 100px;"></div>
+  <div class="border rounded-4 ms-4" style="width: 100px; height: 100px;"></div>
+  <div class="border rounded-5 ms-4" style="width: 100px; height: 100px;"></div>
+</div>
+
+<div class="fs-4">rounded position size</div>
+<div class="row">
+  <div class="border rounded-bottom-1 ms-4" style="width: 100px; height: 100px;"></div>
+  <div class="border rounded-start-2 ms-4" style="width: 100px; height: 100px;"></div>
+  <div class="border rounded-end-circle ms-4" style="width: 100px; height: 100px;"></div>
+  <div class="border rounded-start-pill ms-4" style="width: 100px; height: 100px;"></div>
+  <div class="border rounded-5 rounded-top-0 ms-4" style="width: 100px; height: 100px;"></div>
+</div>
