--- a/app/views/cards/card.html.erb
+++ b/app/views/cards/card.html.erb
@@ -206,3 +206,52 @@
   </div>
 </div>
 
+<div class="card mb-4 text-center">
+  <div class="card-header">
+    <ul class="nav nav-pills card-header-pills">
+      <li class="nav-item">
+        <a class="nav-link active" href="#">Active</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled">Disabled</a>
+      </li>
+    </ul>
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Special title treatment</h5>
+    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+
+<div class="card mb-3 w-25">
+  <%# <img src="..." class="card-img-top" alt="..."> %>
+  <%= image_tag 'chrome_plating.jpeg', alt: 'sample image', class: 'card-img-top' %>
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+  </div>
+</div>
+<div class="card mb-4 w-25">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+  </div>
+  <%# <img src="..." class="card-img-bottom" alt="..."> %>
+  <%= image_tag 'chrome_plating.jpeg', alt: 'sample image', class: 'card-img-top' %>
+</div>
+
+<div class="card mb-4 text-bg-dark w-25">
+  <%# <img src="..." class="card-img" alt="..."> %>
+  <%= image_tag 'chrome_plating.jpeg', alt: 'sample image', class: 'card-img-top' %>
+  <div class="card-img-overlay">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    <p class="card-text"><small>Last updated 3 mins ago</small></p>
+  </div>
+</div>
