--- a/app/views/cards/card.html.erb
+++ b/app/views/cards/card.html.erb
@@ -397,13 +397,13 @@
 
 <!-- メインメニューのレイアウト-->
 <div class="container w-50">
-  <div class="row mb-5">
+  <div class="row mb-4">
     <div class="col">
       <div class="card pt-2" style="width: 18rem;">
         <%= image_tag 'experiment.svg', alt: 'sample image', class: 'card-img-top w-25', width: 50, height: 50 %>
         <div class="card-body">
           <h5 class="card-title">Search by treatment</h5>
-          <p class="card-text">Enter a surface treatment name to search for a treatment.</p>
+          <p class="card-text">Enter a treatment name to search for a surface treatment.</p>
           <a href="#" class="card-link">Go to search page</a>
         </div>
       </div>
@@ -413,7 +413,7 @@
         <%= image_tag 'category.svg', alt: 'sample image', class: 'card-img-top w-25', width: 50, height: 50 %>
         <div class="card-body">
           <h5 class="card-title">Search by category</h5>
-          <p class="card-text">Search for a process by selecting a category from the drop-down list.</p>
+          <p class="card-text">Select a category from the list to search for surface treatments.</p>
           <a href="#" class="card-link">Go to search page</a>
         </div>
       </div>
@@ -423,8 +423,54 @@
         <%= image_tag 'factory.svg', alt: 'sample image', class: 'card-img-top w-25', width: 50, height: 50 %>
         <div class="card-body">
           <h5 class="card-title">Search by maker</h5>
-          <p class="card-text">Enter the name of the maker to search for a treatment.</p>
+          <p class="card-text">Enter a manufacturer's name to search for surface treatments.</p>
           <a href="#" class="card-link">Go to search page</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row mb-4">
+    <div class="col">
+      <div class="card pt-2" style="width: 18rem;">
+        <%= image_tag 'list.svg', alt: 'sample image', class: 'card-img-top w-25', width: 50, height: 50 %>
+        <div class="card-body">
+          <h5 class="card-title">Search by list</h5>
+          <p class="card-text">Search for a treatment from the list of surface treatments.</p>
+          <a href="#" class="card-link">Go to search page</a>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card pt-2" style="width: 18rem;">
+        <%= image_tag 'library_add.svg', alt: 'sample image', class: 'card-img-top w-25', width: 50, height: 50 %>
+        <div class="card-body">
+          <h5 class="card-title">Register a new treatment</h5>
+          <p class="card-text">Register new surface preparation information.</p>
+          <a href="#" class="card-link">Go to registration page</a>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card pt-2" style="width: 18rem;">
+        <%= image_tag 'dashboard_customize.svg', alt: 'sample image', class: 'card-img-top w-25', width: 50, height: 50 %>
+        <div class="card-body">
+          <h5 class="card-title">Category management</h5>
+          <p class="card-text">Manage information about categories in one place.</p>
+          <a href="#" class="card-link">Go to management page</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row mb-4">
+    <div class="col">
+      <div class="card pt-2" style="width: 18rem;">
+        <%= image_tag 'users_management.svg', alt: 'sample image', class: 'card-img-top w-25', width: 50, height: 50 %>
+        <div class="card-body">
+          <h5 class="card-title">User management</h5>
+          <p class="card-text">Manage information about users in one place.</p>
+          <a href="#" class="card-link">Go to management page</a>
         </div>
       </div>
     </div>
