add: Add list layout

--- a/app/views/cards/card.html.erb
+++ b/app/views/cards/card.html.erb
@@ -504,3 +504,45 @@
     </div>
   </div>
 </div>
+
+<!-- リスト形式のレイアウト -->
+<nav class="navbar bg-body-tertiary border-bottom mb-5">
+  <div class="container justify-content-center">
+    <a class="navbar-brand" href="#">Surface Treatment Manager</a>
+  </div>
+</nav>
+
+<div class="container w-50 mb-5">
+  <div class="fs-3 text-center mb-5">Surface Treatment List</div>
+
+  <div class="list-group list-group-flush">
+    <div class="list-group-item list-group-item-action">
+      <div class="d-flex w-100 justify-content-between">
+        <small class="mb-1">Treatment name / Category</small>
+        <small>Update</small>
+      </div>
+    </div>
+
+    <a href="#" class="list-group-item list-group-item-action">
+      <div class="d-flex w-100 justify-content-between">
+        <h5 class="mb-1">Hard chrome plating</h5>
+        <small>2024/3/16</small>
+      </div>
+      <p class="mb-1">plating</p>
+    </a>
+    <a href="#" class="list-group-item list-group-item-action">
+      <div class="d-flex w-100 justify-content-between">
+        <h5 class="mb-1">Electroless nickel plating</h5>
+        <small>2024/3/15</small>
+      </div>
+      <p class="mb-1">plating</p>
+    </a>
+    <a href="#" class="list-group-item list-group-item-action">
+      <div class="d-flex w-100 justify-content-between">
+        <h5 class="mb-1">White anodized aluminum</h5>
+        <small>2024/3/14</small>
+      </div>
+      <p class="mb-1">anodic oxidation</p>
+    </a>
+  </div>
+</div>
