add: Add information layout

--- a/app/views/cards/card.html.erb
+++ b/app/views/cards/card.html.erb
@@ -546,3 +546,36 @@
     </a>
   </div>
 </div>
+
+<!-- 閲覧形式のレイアウト -->
+<nav class="navbar bg-body-tertiary border-bottom mb-5">
+  <div class="container justify-content-center">
+    <a class="navbar-brand" href="#">Surface Treatment Manager</a>
+  </div>
+</nav>
+
+<div class="container w-50 mb-5 justify-content-center">
+  <div class="fs-3 text-center mb-5">Surface Treatment Information</div>
+  <div class="list-group">
+    <li class="d-flex justify-content-between list-group-item">
+      <div>Name :</div>
+      <div>Hard chrome plating</div>
+    </li>
+    <li class="d-flex justify-content-between list-group-item">
+      <div>Category :</div>
+      <div>plating</div>
+    </li>
+    <li class="d-flex justify-content-between list-group-item">
+      <div>Color :</div>
+      <div>silver</div>
+    </li>
+    <li class="d-flex justify-content-between list-group-item">
+      <div>Maker :</div>
+      <div>McCullough Inc</div>
+    </li>
+    <li class="d-flex justify-content-between list-group-item">
+      <div class="mb-1">Picture :</div>
+      <div class="text-center"><%= image_tag 'chrome_plating.jpeg', alt: 'sample image', width: 250, height: 250 %></div>
+    </li>
+  </div>
+</div>
