Add horizontal folding

--- a/app/views/collapses/collapse.html.erb
+++ b/app/views/collapses/collapse.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <p>
-    <button class="btn border" data-bs-toggle="collapse" data-bs-target="#collapseFirst">
+    <button class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#collapseFirst">
       Page Menu
     </button>
   </p>
@@ -11,6 +11,19 @@
         <li class="list-group-item"><a href="#">Destroy</a></li>
         <li class="list-group-item"><a href="#">Main Menu</a></li>
       </ul>
+    </div>
+  </div>
+
+  <p>
+    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
+      Toggle width collapse
+    </button>
+  </p>
+  <div style="min-height: 120px;">
+    <div class="collapse collapse-horizontal" id="collapseWidthExample">
+      <div class="card card-body" style="width: 300px;">
+        This is some placeholder content for a horizontal collapse. It's hidden by default and shown when triggered.
+      </div>
     </div>
   </div>
 </div>
